Change image filename extension from .jpg to .JPG

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="outer">
     <div class="card">
       <main>
-        <img src="img.jpg" alt="profile photo" class="circle-img" />
+        <img src="img.JPG" alt="profile photo" class="circle-img" />
         <div class="nama">Maulana</div>
         <div class="nim">202510370110113</div>
         <div class="prodi">Teknik Informatika</div>
