menambahkan logo dan mengganti nama title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" type="" href="logo.png">
+    <title>Introductory</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -14,7 +15,7 @@
         <div class="outer">
     <div class="card">
       <main>
-        <img src="img.jpg" alt="profile photo" class="circle-img" />
+        <img src="img.JPG" alt="profile photo" class="circle-img" />
         <div class="nama">Maulana</div>
         <div class="nim">202510370110113</div>
         <div class="prodi">Teknik Informatika</div>
