mengganti link fb

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="https://wa.me/6285735943384" target="_blank"
             ><i class="fab fa-whatsapp"></i
           ></a>
-          <a href="https://facebook.com/" target="_blank"
+          <a href="https://www.facebook.com/share/1b38iRhGxK/?mibextid=wwXIfr" target="_blank"
             ><i class="fab fa-facebook"></i
           ></a>
         </div>
